[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "IntriguingProperties"
version = "0.1.0"
dependencies = [
    "torchvision",
    "matplotlib",
    "PyYAML",
]

[project.scripts]
train = "lipschitz.scripts.train.main:main"
plot = "lipschitz.scripts.plot.results:main"


[tool.setuptools.packages.find]
where = ["."]
